Added the start up option --separate-dialogs.
This turns off the transient_for option in gtk dialog boxes.
Transient dialogs are subwindows of their parent, which is
generally good, since they don't get lost that way.  But
the Mac screen capture utility can't automatically grab
a transient dialog, so it's easier when generating figures
for the manual to have dialog boxes be full fledged windows.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -51,6 +51,9 @@ OOF2 2.3.3
   methods detect non-square matrices and raise an exception, which is
   better than crashing.
 
+* Added a utility script, oof2-extension-setup, to make it easier to
+  build extensions from the templates in EXTENSION_TEMPLATES.
+
 OOF2 2.3.2
 
 * Eliminated some opportunities for roundoff error in Rationalize that
